# smeta

./: .gitignore  README.md  pyproject.toml  wsgi.py
smeta/: __init__.py
smeta/templates/: login_selector.html
