[project]
name = "smeta"
version = "0.1.0"
description = "A meta relationship API and web UI for creating relationships between different services"
authors = [
    {name = "Simon Lundström",email = "simlu+github@su.se"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-multipass[authlib] (>=0.11.2,<0.12.0)",
]

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "python-lsp-server (>=1.14.0,<2.0.0)"
]
